force-app/main/default/objects/UI_Task_Configuration__mdt/fields/ClassNames__c.field-meta.xml
<CustomField>
    <fullName>ClassNames__c</fullName>
    <label>ClassNames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>