force-app/main/default/objects/UI_Task_Configuration__mdt/fields/is_Flow__c.field-meta.xml
<CustomField>
    <fullName>is_Flow__c</fullName>
    <label>is Flow</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>