force-app/main/default/objects/UI_Task_Configuration__mdt/fields/Parameter_String_2__c.field-meta.xml
<CustomField>
    <fullName>Parameter_String_2__c</fullName>
    <label>Parameter String 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>