force-app/main/default/objects/UI_Task_Configuration__mdt/fields/Parellel_Job__c.field-meta.xml
<CustomField>
    <fullName>Parellel_Job__c</fullName>
    <label>Parellel Job</label>
    <referenceTo>UI_Job_Configuration__mdt</referenceTo>
    <relationshipLabel>UI Task Configurations (Parellel Job)</relationshipLabel>
    <relationshipName>Parallel_Tasks_Config</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>