force-app/main/default/objects/UI_Task_Configuration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parellel</fullName>
                <default>true</default>
                <label>Parellel</label>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>