force-app/main/default/objects/UI_Task_Configuration__mdt/fields/UI_Job__c.field-meta.xml
<CustomField>
    <fullName>UI_Job__c</fullName>
    <label>UI Job</label>
    <referenceTo>UI_Job_Configuration__mdt</referenceTo>
    <relationshipLabel>UI Task Configurations</relationshipLabel>
    <relationshipName>UI_Tasks</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>