force-app/main/default/objects/UI_Task_Configuration__mdt/validationRules/Parellel_Configuration.validationRule-meta.xml
<ValidationRule>
    <fullName>Parellel_Configuration</fullName>
    <active>true</active>
    <errorConditionFormula>Parellel_Job__c == Null &amp;&amp;  TEXT(Type__c) == &apos;Parellel&apos;</errorConditionFormula>
    <errorDisplayField>Parellel_Job__c</errorDisplayField>
    <errorMessage>Parellel Job should be set when type is Parellel .</errorMessage>
</ValidationRule>